<resources>
    <string name="app_name">EasyWeather</string>
    <string name="location">定位</string>
    <string name="feedback">期待反馈</string>
    <string name="like">喜欢</string>
    <string name="scenic_spot">景点</string>
    <string name="setting">设置</string>
    <string name="share">分享</string>
    <string name="help">帮助</string>
    <string name="laboratory">实验室</string>
    <string name="wiki">天气百科</string>
    <string name="future">未来天气走向</string>
    <string name="about">关于</string>
    <string name="sunrise">日出</string>
    <string name="sunset">日落</string>
    <string name="press">气压</string>
    <string name="uv">紫外线指数</string>
    <string name="qlty">空气质量级别</string>
    <string name="vis">可见度</string>
    <string name="pm">PM2.5</string>
    <string name="hum">湿度</string>
    <string name="search_title">搜索城市(暂不支持拼音)</string>
    <string name="search_hint">搜索城市(暂不支持拼音)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skin">皮肤设置</string>
    <string name="action_settings">夜间模式</string>
    <string name="night_action_settings">夜间模式</string>
    <string name="nightMode1">夜间模式一</string>
    <string name="nightMode2">夜间模式二</string>
    <string name="byhieg">作者：byhieg</string>
    <string name="skywy">作者：skyWY</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="gson">gson</string>
    <string name="greendao">greenDao</string>
    <string name="okhttp">okhttp</string>
    <string name="butterknife">butterknife</string>
    <string name="baidulbs_android">BaiduLBS_Android</string>
    <string name="android_support_library">android-support-library</string>
    <string name="mit_license">MIT License</string>
    <string name="mit_content">Copyright © 2016 byhieg
        \n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the Software),
        to deal in the Software without restriction, including without limitation the rights to use,
        copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software,
        and to permit persons to whom the Software is furnished to do so,
        subject to the following conditions:
        \n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the
        Software.\n\nTHE SOFTWARE IS PROVIDED AS IS, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED,
        INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
        IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
        IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
    </string>
    <string name="q_1">1.天气更新时间的问题</string>
    <string name="a_1">答：采用和风天气的免费天气数据，和风天气免费版天气数据每小时一更新，更新时间在每小时的52-53分钟左右</string>
    <string name="q_2">2. 天气预报功能有限的问题</string>
    <string name="a_2">答：因为采用和风天气免费数据，和风天气免费版能提供天气功能有限，暂无天气预警，暂无未来每小时天气播报等功能</string>
    <string name="q_3">3. 如何设置首页城市的天气</string>
    <string name="a_3">答：在城市管理界面，长按想要添加的城市，会弹出设为首页城市的对话框</string>
    <string name="q_4">4. 如何删除添加城市</string>
    <string name="a_4">答：在城市管理对要删除的城市进行左右滑动即可</string>
    <string name="q_5">5. 定位无法精确到县，区</string>
    <string name="a_5">答：受限于免费版天气数据，可能定位的地点无天气数据，所以定位的地区最小级别为城市，如果要查询更低级别的地区则可以在城市管理界面进行搜索，添加</string>
</resources>