<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".home.MainActivity">


    <item android:id="@+id/add_city"
        android:title="添加城市"
        android:icon="@mipmap/ic_add_white_24dp"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/location"
        android:title="@string/location"
        android:orderInCategory="80"
        app:showAsAction="never" />

    <item android:id="@+id/feedback"
        android:title="@string/feedback"
        android:orderInCategory="90"
        app:showAsAction="never" />

    <item android:id="@+id/like"
        android:title="@string/like"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>