<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginTop="@dimen/mainactivity_padding"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/maincolor"
        android:padding="@dimen/mainactivity_padding">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp">
            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightgray"
                android:textSize="@dimen/describeTextSize"
                android:layout_alignParentLeft="true"
                android:text="今天 08/10/2016"/>

            <TextView
                android:id="@+id/updateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightgray"
                android:textSize="@dimen/describeTextSize"
                android:layout_alignParentRight="true"
                android:text="最近更新：0分钟之前"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/tempTextSize"
                android:text="27°"
                />

            <ImageView
                android:id="@+id/tempImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_toRightOf="@id/temp"
                android:src="@mipmap/sunny"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/showTextSize"
                    android:textColor="@color/white"
                    android:id="@+id/tempHigh"
                    android:text="高 32°"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/showTextSize"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:id="@+id/tempLow"
                    android:text="低 32°"
                    />
            </LinearLayout>

        </RelativeLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cloth"
                android:textSize="@dimen/showTextSize"
                android:textColor="@color/white"
                android:text="36°" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/showTextSize"
                android:textColor="@color/white"
                android:id="@+id/condition"
                android:text="晴"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="15dp"
                android:id="@+id/left">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pm"
                    android:textSize="@dimen/describeTextSize"
                    android:textColor="@color/white"
                    android:layout_marginBottom="2dp"
                    android:text="120"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/describeTextSize"
                    android:text="@string/pm" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_toRightOf="@id/left">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/hum"
                    android:textColor="@color/white"
                    android:textSize="@dimen/describeTextSize"
                    android:text="74"
                    android:layout_marginBottom="2dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/describeTextSize"
                    android:text="@string/hum" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/right"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@id/center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/wind"
                    android:textColor="@color/white"
                    android:textSize="@dimen/describeTextSize"
                    android:layout_marginBottom="2dp"
                    android:text="0.3m/s"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/wind_dir"
                    android:textColor="@color/white"
                    android:textSize="@dimen/describeTextSize"
                    android:text="北风" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:clickable="true"
                android:descendantFocusability="blocksDescendants"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/to_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/describeTextSize"
                    android:text="详细"/>

                <ImageView
                    android:id="@+id/arrow_detail"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/ic_keyboard_arrow_down_white_24dp"
                    android:scaleType="center"/>
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <!--扩展的布局-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondcolor"
        android:id="@+id/expand_view"
        android:visibility="gone"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/describeTextSize"
                android:id="@+id/qlty"
                android:text="好"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/lightgray"
                android:textSize="@dimen/describeTextSize"
                android:text="@string/qlty"
                android:gravity="center_horizontal"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/describeTextSize"
                android:id="@+id/vis"
                android:text="12"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/lightgray"
                android:textSize="@dimen/describeTextSize"
                android:text="@string/vis"
                android:gravity="center_horizontal" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/describeTextSize"
                android:id="@+id/pres"
                android:text="100"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/lightgray"
                android:textSize="@dimen/describeTextSize"
                android:text="@string/press"
                android:gravity="center_horizontal"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/describeTextSize"
                android:id="@+id/uv"
                android:text="145123"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/lightgray"
                android:textSize="@dimen/describeTextSize"
                android:text="@string/uv"
                android:gravity="center_horizontal" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/describeTextSize"
                android:id="@+id/sunrise"
                android:text="08:00"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/lightgray"
                android:textSize="@dimen/describeTextSize"
                android:text="@string/sunrise"
                android:gravity="center_horizontal"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/describeTextSize"
                android:id="@+id/sunset"
                android:text="17:00"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/lightgray"
                android:textSize="@dimen/describeTextSize"
                android:text="@string/sunset"
                android:gravity="center_horizontal" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>